--- a/styles.css
+++ b/styles.css
@@ -1,92 +1,47 @@
-/* Resetowanie domyślnych stylów dla wszystkich elementów */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  /* Styl dla całej strony */
-  body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    background-color: #f2f2f2;
-    color: #333;
-  }
-  
-  /* Kontener dla zawartości strony */
-  .container {
-    max-width: 960px;
-    margin: 0 auto;
-    padding: 20px;
-  }
-  
-  /* Nagłówek strony */
-  header {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    text-align: center;
-  }
-  
-  /* Nawigacja */
-  nav {
-    background-color: #666;
-    padding: 10px 0;
-  }
-  
-  nav ul {
-    list-style: none;
-    text-align: center;
-  }
-  
-  nav ul li {
-    display: inline;
-    margin-right: 20px;
-  }
-  
-  nav ul li a {
-    color: #fff;
-    text-decoration: none;
-  }
-  
-  nav ul li a:hover {
-    text-decoration: underline;
-  }
-  
-  /* Sekcje */
-  section {
-    padding: 20px;
-    margin-bottom: 20px;
-    background-color: #fff;
-  }
-  
-  /* Stopka */
-  footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 20px;
-  }
-  
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  #container
-  {
-    width: 100%;
-    /*height: 100vh;*/
-    overflow: auto;
-  }
+body {
+  font-family: Arial, sans-serif;
+  line-height: 0.6;
+  background-color: #f2f2f2;
+  color: #333;
+  margin: 0;
+  padding: 0;
+}
 
-  #main
-  {
-    float: left;
-    width: 20%;
-    height: 100vh;
-  }
+header {
+  background-color: #e1e1e1;
+  color: #fff;
+  text-align: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  font-size: 24px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
 
-  #map
-  {
-    float: right;
-    /* background-color: aqua; */
-    width: 80%;
-    height: 100vh;
-  }
+#main {
+  width: calc(100% - 300px);
+  margin-top: 100px;
+}
+
+#map {
+  width: 100%;
+  height: calc(100vh - 63px);
+  margin-top: 63px;
+}
+
+h1 {
+  text-align: center;
+  font-size: 36px;
+  color: #333;
+  padding: 20px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
