--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ header {
   width: 100%;
   height: calc(100vh - 63px);
   margin-top: 63px;
+  z-index: 98; /* Dodajemy z-index do mapy */
 }
 
 h1 {
@@ -44,4 +45,53 @@ h1 {
   color: #333;
   padding: 20px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
+.menuItem {
+  display: block;
+  margin: 2rem 4rem;
+  font-size: 1.8rem;
+  color: white;
+  text-decoration: none;
+}
+
+.menuItem:hover {
+  text-decoration: underline;
+}
+
+.hamburger {
+  position: fixed;
+  z-index: 100;
+  top: 1rem;
+  right: 1rem;
+  padding: 4px;
+  border: black solid 1px;
+  background: white;
+  cursor: pointer;
+}
+
+.closeIcon {
+  display: none;
+}
+
+.menu {
+  position: fixed;
+  transform: translateY(-100%);
+  transition: transform 0.2s;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 99;
+  background: black;
+  color: white;
+  list-style: none;
+  padding-top: 4rem;
+}
+
+.showMenu {
+  transform: translateY(0);
+}
+
+.hidden-map {
+  display: none;
 }
