--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ header {
   width: 100%;
   height: calc(100vh - 63px);
   margin-top: 63px;
-  z-index: 98; /* Dodajemy z-index do mapy */
+  z-index: 98; 
 }
 
 h1 {
@@ -46,6 +46,7 @@ h1 {
   padding: 20px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
+
 .menuItem {
   display: block;
   margin: 2rem 4rem;
@@ -57,6 +58,11 @@ h1 {
 .menuItem:hover {
   text-decoration: underline;
 }
+
+.menuItem a {
+  text-decoration: none;
+}
+
 
 .hamburger {
   position: fixed;
@@ -93,5 +99,9 @@ h1 {
 }
 
 .hidden-map {
+  display: none;
+}
+
+input[type="file"] {
   display: none;
 }
