--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ h1 {
 
 .menu {
   position: fixed;
-  transform: translateY(-100%);
+  transform: translateX(-100%);
   transition: transform 0.2s;
   top: 0;
   left: 0;
