--- a/styles.css
+++ b/styles.css
@@ -100,14 +100,36 @@ input[type="file"] {
 .fileList {
   list-style: none;
   padding: 0;
-  margin: 2rem 4rem;
-  font-size: 1rem;
+  margin: 2rem 0;
 }
 
 .fileList li {
+  display: flex;
+  align-items: center;
   margin-bottom: 0.5rem;
 }
 
 .fileList button {
-  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.fileList .deleteIcon {
+  margin-left: auto;
+  margin-right: 1rem;
+  cursor: pointer;
+}
+
+.fileList .fileName {
+  margin-right: auto; 
+}
+
+.fileList .fileText {
+  cursor: pointer;
+  text-decoration: none;
+  margin: 0rem 4rem;
+  font-size: 1rem;
+}
+
+.fileList .fileText:hover {
+  text-decoration: underline;
 }
